fix(Input): повыщенный z-index при фокусе
fix(Input): повыщенный z-index при фокусе

--- a/packages/retail-ui/components/Input/Input.less
+++ b/packages/retail-ui/components/Input/Input.less
@@ -15,6 +15,10 @@
     width: 250px;
   }
 
+  .root.focused {
+    z-index: 10;
+  }
+
   .input {
     border: 1px solid @border-color-gray-light;
     border-top-color: @border-color-gray-dark;
